@@ -1,3 +1,7 @@
+zg 15.06.2016 22:27:05 +0200 - build 4708
+
+1. с форума: ShiftEnd и ShiftHome в панелях тормозят.
+
 drkns 14.06.2016 18:31:09 +0200 - build 4707
 
 1. Системные ассоциации, у которых "associated program" - bat или cmd, запускались в отдельном окне.
